--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-import": "^1.12.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "postcss-pxtorem": "^4.0.1",
