--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "lib-flexible": "^0.3.2",
     "vant": "^2.0.7",
@@ -34,6 +35,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "postcss-pxtorem": "^4.0.1",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -53,7 +55,7 @@
   "postcss": {
     "plugins": {
       "autoprefixer": {
-        "browsers": [
+        "overrideBrowserslist": [
           "Android >= 4.0",
           "iOS >= 7"
         ]
